Make sure active links in naked lists meet AA contrast

--- a/stylesheets/_component.lists.scss
+++ b/stylesheets/_component.lists.scss
@@ -13,6 +13,10 @@
         color: color(primary, alt);
         text-decoration: none;
     }
+
+    & > a:focus {
+        color: color(text);
+    }
 }
 
 .list--inline {
